support extensions within single-target watchos apps

--- a/test/starlark_tests/targets_under_test/watchos/BUILD
+++ b/test/starlark_tests/targets_under_test/watchos/BUILD
@@ -92,6 +92,28 @@ watchos_application(
 )
 
 watchos_application(
+    name = "single_target_app_with_extension",
+    app_icons = ["//test/starlark_tests/resources:WatchAppIcon.xcassets"],
+    bundle_id = "com.google.example",
+    entitlements = "//test/starlark_tests/resources:entitlements.plist",
+    extensions = [":watchos_app_extension"],
+    infoplists = [
+        "//test/starlark_tests/resources:WatchosAppInfo.plist",
+    ],
+    minimum_os_version = common.min_os_watchos.single_target_app,
+    provisioning_profile = "//test/testdata/provisioning:integration_testing_ios.mobileprovision",
+    resources = [
+        "//test/starlark_tests/resources:example_filegroup",
+        "//test/starlark_tests/resources:localization",
+        "//test/starlark_tests/resources:resource_bundle",
+    ],
+    tags = common.fixture_tags,
+    deps = [
+        "//test/starlark_tests/resources:watchkit_single_target_app_main_lib",
+    ],
+)
+
+watchos_application(
     name = "app_with_ext_with_imported_fmwk",
     app_icons = ["//test/starlark_tests/resources:WatchAppIcon.xcassets"],
     bundle_id = "com.google.example",
@@ -508,6 +530,23 @@ ios_application(
 )
 
 ios_application(
+    name = "ios_watchos_with_watchos_extension_within_extensions",
+    bundle_id = "com.google",
+    bundle_name = "companion",
+    families = ["iphone"],
+    infoplists = [
+        "//test/starlark_tests/resources:Info.plist",
+    ],
+    minimum_os_version = common.min_os_ios.arm_sim_support,
+    provisioning_profile = "//test/testdata/provisioning:integration_testing_ios.mobileprovision",
+    tags = common.fixture_tags,
+    watch_application = ":watchos_app_with_extension_within_extensions",
+    deps = [
+        ":swift_lib",
+    ],
+)
+
+ios_application(
     name = "ios_watchos_with_watchos_extension_and_symbols_in_bundle",
     bundle_id = "com.google",
     bundle_name = "companion",
@@ -564,6 +603,20 @@ watchos_application(
     bundle_id = "com.google.example",
     bundle_name = "app",
     extension = ":watchos_ext_with_extension",
+    infoplists = [
+        "//test/starlark_tests/resources:WatchosAppInfo.plist",
+    ],
+    minimum_os_version = common.min_os_watchos.baseline,
+    provisioning_profile = "//test/testdata/provisioning:integration_testing_ios.mobileprovision",
+    tags = common.fixture_tags,
+)
+
+watchos_application(
+    name = "watchos_app_with_extension_within_extensions",
+    app_icons = ["//test/starlark_tests/resources:WatchAppIcon.xcassets"],
+    bundle_id = "com.google.example",
+    bundle_name = "app",
+    extensions = [":watchos_ext_with_extension"],
     infoplists = [
         "//test/starlark_tests/resources:WatchosAppInfo.plist",
     ],
